lythrum/core/monitoring/grafana/grafana.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`${SUBDOMAIN_GRAFANA}.${DOMAIN_INTERNAL}`)
      middlewares:
        - name: redirect-https
          namespace: traefik
      services:
        - name: noop@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.${DOMAIN_TAILSCALE}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${SUBDOMAIN_GRAFANA}.${DOMAIN_INTERNAL}`)
      services:
        - name: grafana-service
          port: 3000
  tls:
    secretName: grafana-tls
